2015-01-08  Karl Berry  <karl@gnu.org>

	* texindex.in: also look for ../share/texinfo/texindex.awk,
	relative to dirname $0.

	* ti.twjr (Invocation_name): new global, renamed from Prgname.
	(usage): use it, a la coreutils.
	* texindex.in: pass it (value $0), with -v.
	
	* Makefile.am (EXTRA_DIST): dek_idx.png rename.

2015-01-06  Karl Berry  <karl@gnu.org>

	first merge into automake:
	* texindex/Makefile.am: new file.
	* texindex/texindex.in: new file.
	* texindex/README: update.
	(see also ../ChangeLog.)

2014-12-30         Arnold D. Robbins     <arnold@skeeve.com>

	* ti.twjr: Remove `@xrefautomaticsectiontitle on'. It's now
	supplied by jrweave.
	* jrweave: Updated.

2014-12-26         Arnold D. Robbins     <arnold@skeeve.com>

	* ti.twjr: Restore use of `@xrefautomaticsectiontitle on'.
	And restore support for vim editing.

2014-12-15  Karl Berry  <karl@gnu.org>

	* ti.twjr: convert to minimal Texinfo conventions
	instead of Arnold's published-book conventions.

2014-12-13         Arnold D. Robbins     <arnold@skeeve.com>

	* jrtangle, jrweave: Updated with versions that include
	github location.

2014-08-07         Arnold D. Robbins     <arnold@skeeve.com>

	* ti.twjr: Typo fix in an index entry. Change the update month
	and increase version to 0.95.

2014-05-30         Arnold D. Robbins     <arnold@skeeve.com>

	* README: New file.
	* tests: New directory with some regression tests.
	* jrtangle, jrweave: Copied from TexiWebJr to have standalone.

	*****

	* All: Pushed to https://github.com/arnoldrobbins/texindex.

2014-04-26         Arnold D. Robbins     <arnold@skeeve.com>

	* ti.twjr: Remove summaries appendix. Not needed with better
	formatting from jrweave.  Bump version to 0.94.

2014-04-16         Arnold D. Robbins     <arnold@skeeve.com>

	* ti.twjr: Bug fix. Multiple files had junk in second and
	subsequent output files. Needed to clear out more data between
	files. Bump version to 0.93.
